[gd_scene load_steps=18 format=2]

[ext_resource path="res://Script/MiniGames/CutGameManager.gd" type="Script" id=1]
[ext_resource path="res://Textures/x-rayshadow.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Mini Games/Cut/no_cut_pattern.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Mini Games/Cut/TextureRect.gd" type="Script" id=4]
[ext_resource path="res://Scenes/TestUI/Timer.gd" type="Script" id=5]
[ext_resource path="res://Fonts/ds_digital.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scenes/Mini Games/Cut/start_finish.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Mini Games/Cut/StartFinish.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Mini Games/Cut/background.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Mini Games/Cut/pointer.png" type="Texture" id=10]
[ext_resource path="res://Fonts/Righteous-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Scenes/Mini Games/Cut/LaserPointer.gd" type="Script" id=12]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.133333, 0.133333, 0.133333, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 12.0
content_margin_right = 12.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.364238, 0.668874, 0.827815, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 0, 0, 1, 1, 0.46875, 0, 1, 1, 0.965726, 0.935484, 1 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 12.0
content_margin_right = 12.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=5]
size = 24
outline_color = Color( 0.560784, 0.458824, 0.4, 1 )
font_data = ExtResource( 11 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
show_behind_parent = true
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
show_behind_parent = true
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MetalPlate" type="TextureRect" parent="Control"]
show_behind_parent = true
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoCuttingZoneRect" type="TextureRect" parent="Control"]
show_behind_parent = true
margin_left = -96.0
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map" type="TextureRect" parent="Control"]
show_behind_parent = true
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X-rayVision" type="TextureRect" parent="Control"]
show_behind_parent = true
anchor_left = -0.00124652
anchor_top = 5.6514e-08
anchor_right = -0.00124651
anchor_bottom = 5.6514e-08
margin_left = -1049.64
margin_top = -957.297
margin_right = -249.63
margin_bottom = -357.297
rect_scale = Vector2( 5, 5 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartCuttingHere" type="TextureRect" parent="Control"]
anchor_right = 0.273
anchor_bottom = 0.144
margin_left = 93.0
margin_top = 403.0
margin_right = -239.16
margin_bottom = 439.48
grow_horizontal = 2
rect_pivot_offset = Vector2( 96, 96 )
texture = ExtResource( 7 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverDialog" type="AcceptDialog" parent="Control"]
anchor_left = 0.534
anchor_top = 0.546
anchor_right = 0.534
anchor_bottom = 0.546
margin_left = -290.61
margin_top = -151.1
margin_right = -140.61
margin_bottom = -51.1002
rect_scale = Vector2( 3, 3 )
popup_exclusive = true
window_title = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompletedDialog" type="AcceptDialog" parent="Control"]
anchor_left = 0.534
anchor_top = 0.546
anchor_right = 0.534
anchor_bottom = 0.546
margin_left = -290.61
margin_top = -151.1
margin_right = -140.61
margin_bottom = -51.1002
rect_scale = Vector2( 3, 3 )
popup_exclusive = true
window_title = "Completed!"
dialog_text = "Good Job!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="PanelContainer" parent="Control"]
margin_left = 1640.32
margin_top = 939.289
margin_right = 1876.32
margin_bottom = 1068.29
rect_clip_content = true
size_flags_stretch_ratio = 0.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control/Timer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 232.0
margin_bottom = 125.001
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Label" type="Label" parent="Control/Timer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 208.0
margin_bottom = 101.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 0.309804, 0.32549, 1 )
text = "10:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphics" type="TextureRect" parent="."]
margin_left = -0.430786
margin_right = 1925.57
margin_bottom = 1084.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CuttingLine" type="Line2D" parent="."]
show_behind_parent = true
width = 12.0
default_color = Color( 0, 0, 0, 1 )
gradient = SubResource( 3 )
joint_mode = 2
antialiased = true

[node name="LaserPointer" type="TextureRect" parent="."]
visible = false
margin_left = 137.0
margin_top = 454.0
margin_right = 217.0
margin_bottom = 534.0
texture = ExtResource( 10 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LABEL" type="Label" parent="LaserPointer"]
anchor_top = -0.00538483
anchor_bottom = -0.00538483
margin_left = -59.4007
margin_top = 95.1428
margin_right = 139.599
margin_bottom = 130.143
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LASER CUTTER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="confirmed" from="Control/GameOverDialog" to="." method="_on_GameOverDialog_confirmed"]
[connection signal="confirmed" from="Control/CompletedDialog" to="." method="_on_CompletedDialog_confirmed"]
[connection signal="popup_hide" from="Control/CompletedDialog" to="." method="_on_CompletedDialog_confirmed"]
